# galynx-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  plan_api_galynx.md  plan_de_desarrollo_galynx.md
.github/workflows/: ci.yml
docs/: api_cli.md  api_frontend.md  api_frontend_cli.md  deploy_docker.md
src/: app.rs  attachments.rs  audit.rs  auth.rs  channels.rs  config.rs  errors.rs  main.rs  observability.rs  rate_limit.rs  reactions.rs  realtime.rs  storage.rs  threads.rs  users.rs  workspaces.rs
tests/: ci_integration.rs
