[package]
name = "galynx-api"
version = "0.1.0"
edition = "2024"
default-run = "galynx-api"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.32", features = ["derive"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = { version = "3.5.1", features = ["rustls-tls"] }
rand = "0.8.5"
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
